--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:ninelloldenburg@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/ninell-oldenburg">github.com/colinbr</a></li>
+	        		<li><a href="https://github.com/ninell-oldenburg">github.com/ninell-oldenburg</a></li>
 				</ul>
 			</footer>
 		</body>
