--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ p {
     color: #010101;
 }
 footer {
-    border-top: 1px solid #d5d5d5;
+    border-top: 1px solid #076620;
     font-size: 1em;
 }
 
