--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 	        		<li><a href="/">home</a></li>
 		        	<!-- <li><a href="/research">work</a></li>
 	        		<li><a href="CV.pdf" target="_blank">CV</a></li>
-	        		<li><a href="/wrting">cyclops</a></li> -->
+	        		<li><a href="/wrting">writing</a></li> -->
 	    		</ul>
 			</nav>
 			<div class="container">
