--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-			<link href="https://fonts.googleapis.com/css?family=Peddana" rel="stylesheet">
-			<link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
+			<link rel="preconnect" href="https://fonts.googleapis.com">
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
 			<link rel="shortcut icon" href="http://ninell-oldenburg.github.io/favicon.ico" type="image/x-icon">
 			<title>Ninell Oldenburg</title>
 			
