--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@ h2 {
 
 p {
     font-size: 0.95em;
-    font-family: 'Courier New', monospace;
+    font-family: 'Raleway', sans-serif;
     line-height: 1.1em;
     color: #010101;
 }
