--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@
 			<div class="container">
 			
 			{{ content }}
+				
+			<p align="center">
+  			<img src="/images/nell.png" />
+			</p>
 			
 			</div><!-- /.container -->
 			<footer>
