--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+			<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&display=swap" rel="stylesheet">
 			<link rel="shortcut icon" href="http://ninell-oldenburg.github.io/favicon.ico" type="image/x-icon">
 			<title>Ninell Oldenburg</title>
 			
