--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">home</a></li>
-		        	<!-- <li><a href="/research">work</a></li>
-	        		<li><a href="CV.pdf" target="_blank">CV</a></li>
-	        		<li><a href="/wrting">writing</a></li> -->
+		        	<!-- <li><a href="/research">work</a></li> -->
+	        		<li><a href="/docs/CV_NinellOldenburg.pdf" target="_blank">CV</a></li>
+	        		<!-- <li><a href="/wrting">writing</a></li> -->
 	    		</ul>
 			</nav>
 			<div class="container">
