--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:ninelloldenburg@gmail.com">email</a></li>
+	        		<a href="https://twitter.com/nellsn1?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @nellsn1</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<li><a href="mailto:ninelloldenburg@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/ninell-oldenburg">github.com/ninell-oldenburg</a></li>
 				</ul>
 			</footer>
