--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 	    		<ul>
 				<li><a href="https://twitter.com/nellsn1?ref_src=twsrc%5Etfw">twitter</a></li>
 				<li><a href="mailto:ninelloldenburg@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/ninell-oldenburg">github.com/ninell-oldenburg</a></li>
+	        		<li><a href="https://github.com/ninell-oldenburg">github</a></li>
 				</ul>
 			</footer>
 		</body>
