--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
 				<li><a href="https://twitter.com/nellsn1?ref_src=twsrc%5Etfw">twitter</a></li>
 				<li><a href="mailto:ninelloldenburg@gmail.com">email</a></li>
 	        		<li><a href="https://github.com/ninell-oldenburg">github</a></li>
+				<li><a href="https://www.linkedin.com/in/ninell-oldenburg-a81834192/">linkedin</a></li>
 				</ul>
 			</footer>
 		</body>
