--- a/_layouts/yesofcourse.html
+++ b/_layouts/yesofcourse.html
@@ -8,14 +8,14 @@
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300&display=swap" rel="stylesheet">
 			<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-			<title>Ninell Oldenburg</title>
+			<title>hey</title>
 			
 		</head>
 		<body>
 			<nav>
 	    		<ul>
 	        		<li><a href="/">home</a></li>
-		        	<!-- <li><a href="/research">work</a></li> -->
+		        	<li><a href="/">yes</a></li>
 	        		<li><a href="/CV.pdf" target="_blank">CV</a></li>
 	        		<!-- <li><a href="/wrting">writing</a></li> -->
 	    		</ul>
