--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">home</a></li>
-		        	<li><a href="/_layouts/yesofcourse.html">yes</a></li>
+		        	<li><a href="/yesofcourse.html">yes</a></li>
 	        		<li><a href="/CV.pdf" target="_blank">CV</a></li>
 	        		<!-- <li><a href="/wrting">writing</a></li> -->
 	    		</ul>
