--- a/css/color-index.css
+++ b/css/color-index.css
@@ -3,6 +3,14 @@ body, .container, nav, footer, .dropdown-content a:hover {
   background-color: #FFDA00; /* Example color (khaki) */
 }
 
+nav ul ul li {
+  display: block;
+}
+
+nav ul li:hover > ul {
+  display: block;
+}
+
 a, a:visited, a:active {
   color: #1689A0; /* Normal link color */
   text-decoration: none;
