--- a/css/color-work.css
+++ b/css/color-work.css
@@ -1,7 +1,16 @@
 /* Color Styles for Page 2 */
 body, .container, footer {
-  background-color: rgb(42, 168, 14);
+  background-color: #058844;
   color: #060500;
+}
+
+/* Adjustments for the navigation menu */
+nav ul ul li {
+  display: block;
+}
+
+nav ul li:hover > ul {
+  display: block;
 }
 
 .container ul {
@@ -22,13 +31,13 @@ body, .container, footer {
   text-decoration: none; /* Remove underline */
   display: inline-block; /* Make links behave like buttons */
   padding: 5px 10px; /* Padding for links */
-  border: 1px solid #086c17; /* Border for links */
+  border: 1px solid #058844; /* Border for links */
   border-radius: 3px; /* Rounded corners for links */
   transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
 }
 
 .container ul li a:hover {
-  background-color: #086c17; /* Hover background color */
+  background-color: #169a56; /* Hover background color */
   color: #FFFFFF; /* Hover text color */
 }
 
@@ -36,7 +45,7 @@ body, .container, footer {
   display: inline-block;
   font-size: inherit;
   color: #FFDA00;
-  background-color: rgb(4, 136, 68);
+  background-color: #169a56;
   border: none;
   padding: 2px 4px; /* Adding padding for button-like appearance */
   border-radius: 5px; /* Rounded corners */
@@ -55,7 +64,7 @@ body, .container, footer {
   margin-bottom: 10px; /* Add space between list items */
   padding: 10px; /* Add padding to list items */
   margin: 10px 40px;
-  background-color: rgba(84, 198, 58, 0.742); /* Darker background for list items */
+  background-color: #0f934f; /* Darker background for list items */
   border-radius: 5px; /* Rounded corners */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Soft shadow */
 }
@@ -66,7 +75,7 @@ body, .container, footer {
   display: inline-block; /* Make links behave like buttons */
   padding: 2px 6px; /* Padding for links */
   margin: 1px;
-  border: 1px solid #086c17; /* Border for links */
+  border: 1px solid #19a65d; /* Border for links */
   border-radius: 3px; /* Rounded corners for links */
   transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
 }
