more display flex

--- a/css/color-work.css
+++ b/css/color-work.css
@@ -2,6 +2,9 @@
 body, .container, footer {
   background-color: #29A80E;
   color: #060500;
+  display: flex;
+  justify-content: space-between; 
+  flex-wrap: wrap; 
 }
 
 /* Adjustments for the navigation menu */
@@ -13,6 +16,8 @@ nav ul ul li {
 
 nav ul li:hover > ul {
   display: flex;
+  justify-content: space-between; 
+  flex-wrap: wrap; 
 }
 
 .container ul {
