--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,8 @@ nav ul li a {
 }
 
 footer {
+  display: flex;
+  flex: 1 1 auto; 
   padding: 1em 0;
   text-align: center;
   position: fixed;
@@ -84,6 +86,7 @@ footer ul {
 
 footer ul li {
   display: flex;
+  flex: 1 1 auto; 
   justify-content: space-between; 
   flex-wrap: wrap; 
   margin: 0 1em;
