--- a/css/color-work.css
+++ b/css/color-work.css
@@ -2,23 +2,33 @@
 body, .container, footer {
   background-color: #29A80E;
   color: #060500;
+  display: flex;
+  flex: 1 1 auto; 
+  justify-content: space-between; 
+  flex-wrap: wrap; 
 }
 
 /* Adjustments for the navigation menu */
 nav ul ul li {
-  display: block;
+  display: flex;
+  justify-content: space-between; 
+  flex-wrap: wrap; 
 }
 
 nav ul li:hover > ul {
-  display: block;
+  display: flex;
+  justify-content: space-between; 
+  flex-wrap: wrap; 
 }
 
 .container ul {
   list-style-type: none; /* Remove default list styles */
+  flex: 1 1 auto;
   padding-left: 0; /* Remove default padding */
 }
 
 .container ul li {
+  flex: 1 1 auto;
   margin-bottom: 10px; /* Add space between list items */
   padding: 10px; /* Add padding to list items */
   background-color: #FFFFFF; /* White background for list items */
@@ -27,6 +37,7 @@ nav ul li:hover > ul {
 }
 
 .container ul li a {
+  flex: 1 1 auto;
   color: #086c17; /* Link color */
   text-decoration: none; /* Remove underline */
   display: inline-block; /* Make links behave like buttons */
@@ -42,7 +53,8 @@ nav ul li:hover > ul {
 }
 
 .btn {
-  display: inline-block;
+  display: flex;
+  flex: 1 1 auto; 
   font-size: inherit;
   color: #FFDA00;
   background-color: #169a56;
