--- a/css/color-work.css
+++ b/css/color-work.css
@@ -2,20 +2,20 @@
 body, .container, footer {
   background-color: #29A80E;
   color: #060500;
-  display: flex;
+  display: block;
   justify-content: space-between; 
   flex-wrap: wrap; 
 }
 
 /* Adjustments for the navigation menu */
 nav ul ul li {
-  display: flex;
+  display: block;
   justify-content: space-between; 
   flex-wrap: wrap; 
 }
 
 nav ul li:hover > ul {
-  display: flex;
+  display: block;
   justify-content: space-between; 
   flex-wrap: wrap; 
 }
@@ -49,7 +49,7 @@ nav ul li:hover > ul {
 }
 
 .btn {
-  display: flex;
+  display: block;
   font-size: inherit;
   color: #FFDA00;
   background-color: #169a56;
