--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,6 @@ nav ul {
 }
 
 nav ul li {
-  display: flex;
-  justify-content: space-between; 
-  flex-wrap: wrap; 
   margin: 0 1em;
   position: relative;
 }
@@ -69,8 +66,6 @@ nav ul li a {
 }
 
 footer {
-  display: flex;
-  flex: 1 1 auto; 
   padding: 1em 0;
   text-align: center;
   position: fixed;
@@ -85,9 +80,6 @@ footer ul {
 }
 
 footer ul li {
-  display: flex;
-  flex: 1 1 auto; 
-  justify-content: space-between; 
-  flex-wrap: wrap; 
+  display: block;
   margin: 0 1em;
 }
