--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
 
 nav {
   padding: 1em 0;
+  text-align: center;
 }
 
 nav ul {
@@ -20,6 +21,7 @@ nav ul {
 nav ul li {
   margin: 0 1em;
   position: relative;
+  text-align: center;
 }
 
 nav ul li a {
@@ -77,9 +79,11 @@ footer ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  text-align: center;
 }
 
 footer ul li {
   display: block;
   margin: 0 1em;
+  text-align: center;
 }
