--- a/css/color-index.css
+++ b/css/color-index.css
@@ -4,17 +4,11 @@ body, .container, nav, footer, .dropdown-content a:hover {
 }
 
 nav ul ul li {
-  display: flex;
-  justify-content: center;  /* Center nested items */
-  flex-wrap: wrap;
+  display: block;
 }
-
 nav ul li:hover > ul {
-  display: flex;
-  justify-content: center;  /* Center dropdown items */
-  flex-wrap: wrap;
+  display: block;
 }
-
 a, a:visited, a:active {
   color: #1689A0; /* Normal link color */
   text-decoration: none;
